<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="415dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="#698DFA"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="213dp"
        android:stretchColumns="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow android:textAlignment="center">

            <TextView
                android:layout_width="202dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/produto"
                android:textAlignment="center" />

            <TextView
                android:layout_column="2"
                android:padding="3dip"
                android:text="@string/valor"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/produto1"
                android:textAlignment="center" />

            <TextView
                android:padding="3dip"
                android:text="@string/valor1"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/produto2"
                android:textAlignment="center" />

            <TextView
                android:padding="3dip"
                android:text="@string/valor2"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/produto3"
                android:textAlignment="center" />

            <TextView
                android:padding="3dip"
                android:text="@string/valor3"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>